--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,4 +240,18 @@ met.</string>
     <string name="you_haven_t_referred_any_friends_yet">You haven\'t referred any friends yet.</string>
     <string name="referral_code">Referral Code</string>
     <string name="upload_music_songs_of_the_day_week"><![CDATA[Upload Music (Songs of the Day & Week)]]></string>
+    <string name="you_re_in_the_challenge_has_begun">You’re in - the challenge has begun!</string>
+    <string name="invite_friends_and_grow_in_faith_together_the_more_you_invite_the_longer_you_unlock_free_premium_access_to_all_bible_quests">Invite friends and grow in faith together.The more you invite, the longer you unlock free Premium access to all Bible Quests.</string>
+    <string name="invite_friends">Invite Friends</string>
+    <string name="want_to_unlock_it_for_free">Want to unlock it for free?</string>
+    <string name="invite_friends_to_azrius_and_get_full_access_to_all_bible_quests_free_for_up_to_1_month_when_you_reach_the_referral_goal">Invite friends to Azrius and get full access to all Bible Quests - free for up to 1 month when you reach the referral goal.</string>
+    <string name="or_if_you_d_prefer_instant_access_you_can_start_your_premium_membership_now">Or, if you\'d prefer instant access, you can start your Premium membership now.</string>
+    <string name="invite_friends_for_free_access">Invite Friends for Free Access</string>
+    <string name="subscribe_now">Subscribe Now</string>
+    <string name="you_ve_reached_your_limit">You\'ve Reached Your Limit</string>
+    <string name="you_can_only_take_one_bible_quest_at_a_time_on_the_free_plan_finish_your_current_course_or_upgrade_to_premium_to_unlock_more">You can only take one Bible Quest at a time on the free plan. Finish your current course or upgrade to Premium to unlock more.</string>
+    <string name="continue_current_course">Continue Current Course</string>
+    <string name="upgrade_to_premium">Upgrade to Premium</string>
+    <string name="you_ve_reached_your_course_limit">You\'ve Reached Your Course Limit</string>
+    <string name="you_can_study_up_to_two_bible_quests_at_a_time_with_your_premium_plan_to_start_a_new_one_please_finish_or_end_one_of_your_current_courses_first">You can study up to two Bible Quests at a time with your Premium plan. To start a new one, please finish or end one of your current courses first.</string>
 </resources>
